kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chess-ecosystem-backend
  labels:
    app: chess-ecosystem
    component: backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: chess-ecosystem
    component: backend
  sessionAffinity: ClientIP
